--- a/coords/Base.lproj/Main.storyboard
+++ b/coords/Base.lproj/Main.storyboard
@@ -216,19 +216,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="490" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Aqh-EW-2Ek">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="576" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Aqh-EW-2Ek">
+                                <rect key="frame" x="-4" y="0.0" width="383" height="618"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cardTableView" rowHeight="490" id="tka-SL-PSy" customClass="CardTableViewCell">
-                                        <rect key="frame" x="0.0" y="92" width="375" height="490"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cardTableView" rowHeight="576" id="tka-SL-PSy" customClass="CardTableViewCell">
+                                        <rect key="frame" x="0.0" y="92" width="383" height="576"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="tka-SL-PSy" id="r70-XS-KhD">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="489"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="383" height="575"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="MSR-TE-1Sg">
-                                                    <rect key="frame" x="16" y="0.0" width="343" height="493"/>
+                                                    <rect key="frame" x="16" y="0.0" width="343" height="525"/>
                                                     <subviews>
                                                         <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JFj-P6-VCl">
                                                             <rect key="frame" x="0.0" y="-8" width="343" height="56"/>
@@ -251,20 +251,8 @@
                                                                 <constraint firstAttribute="width" secondItem="emd-M3-est" secondAttribute="height" multiplier="1:1" id="7ca-rq-Q4B"/>
                                                             </constraints>
                                                         </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="comments" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AKQ-uq-qir">
-                                                            <rect key="frame" x="74" y="433" width="81" height="21"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="@Id" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B2j-DB-wsQ">
-                                                            <rect key="frame" x="16" y="433" width="30" height="21"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
                                                         <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uBv-VC-CZH">
-                                                            <rect key="frame" x="0.0" y="377" width="344" height="41"/>
+                                                            <rect key="frame" x="0.0" y="377" width="344" height="140"/>
                                                             <subviews>
                                                                 <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ahV-TG-hdB">
                                                                     <rect key="frame" x="-1" y="6" width="41" height="35"/>
@@ -279,8 +267,50 @@
                                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
+                                                                <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qxV-g1-1dZ">
+                                                                    <rect key="frame" x="0.0" y="49" width="343" height="46"/>
+                                                                    <subviews>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="@Id" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B2j-DB-wsQ">
+                                                                            <rect key="frame" x="20" y="17" width="50" height="21"/>
+                                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                                            <nil key="highlightedColor"/>
+                                                                        </label>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="comments" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AKQ-uq-qir">
+                                                                            <rect key="frame" x="96" y="17" width="81" height="21"/>
+                                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                                            <nil key="highlightedColor"/>
+                                                                        </label>
+                                                                    </subviews>
+                                                                    <color key="backgroundColor" red="0.86278044870000004" green="0.79247690139168037" blue="0.58442205450048479" alpha="1" colorSpace="calibratedRGB"/>
+                                                                </view>
+                                                                <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0mw-aM-ksx">
+                                                                    <rect key="frame" x="0.0" y="95" width="343" height="46"/>
+                                                                    <subviews>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="@Id" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cLv-8Z-k7d">
+                                                                            <rect key="frame" x="20" y="17" width="50" height="21"/>
+                                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                                            <nil key="highlightedColor"/>
+                                                                        </label>
+                                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="comments" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VQL-rI-58h">
+                                                                            <rect key="frame" x="96" y="17" width="81" height="21"/>
+                                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                                            <nil key="highlightedColor"/>
+                                                                        </label>
+                                                                    </subviews>
+                                                                    <color key="backgroundColor" red="0.86278044870000004" green="0.79247690140000004" blue="0.58442205449999995" alpha="1" colorSpace="calibratedRGB"/>
+                                                                </view>
                                                             </subviews>
                                                             <color key="backgroundColor" red="0.97647058823529409" green="0.97647058823529409" blue="0.97647058823529409" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <constraints>
+                                                                <constraint firstItem="qxV-g1-1dZ" firstAttribute="leading" secondItem="uBv-VC-CZH" secondAttribute="leading" id="9vc-xi-0Oe"/>
+                                                                <constraint firstItem="0mw-aM-ksx" firstAttribute="leading" secondItem="uBv-VC-CZH" secondAttribute="leading" id="ImQ-AO-ECs"/>
+                                                                <constraint firstAttribute="trailing" secondItem="0mw-aM-ksx" secondAttribute="trailing" id="UnH-97-ZBZ"/>
+                                                                <constraint firstAttribute="trailing" secondItem="qxV-g1-1dZ" secondAttribute="trailing" id="WtV-Dk-p1j"/>
+                                                            </constraints>
                                                         </view>
                                                     </subviews>
                                                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
@@ -312,6 +342,8 @@
                                             <outlet property="cardNicknameLabel" destination="GYq-3B-meQ" id="6Pt-uN-x1F"/>
                                             <outlet property="cardView" destination="r70-XS-KhD" id="Q7f-t5-Ggh"/>
                                             <outlet property="cardprofileImg" destination="fLD-GZ-ys8" id="QkC-Ra-WWD"/>
+                                            <outlet property="replyIDLabel" destination="B2j-DB-wsQ" id="2Lf-Qr-ycs"/>
+                                            <outlet property="replyTextLabel" destination="AKQ-uq-qir" id="wi6-Vb-NXe"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -335,7 +367,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xJz-UT-K75" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2447.5" y="1147.5"/>
+            <point key="canvasLocation" x="2472.5" y="1231.5"/>
         </scene>
         <!--Feeds-->
         <scene sceneID="x5b-JZ-cof">
